--- a/frontend/src/CssPages/About.css
+++ b/frontend/src/CssPages/About.css
@@ -25,9 +25,9 @@ h2 {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    margin: 20px auto;
+    margin: 50px auto;
     padding: 20px;
-    max-width: 800px;
+    max-width: 1000px;
     height: 250px;
     background-color: grey;
     color: white;
@@ -42,7 +42,7 @@ h2 {
     background-color: grey;
 }
 
-.missionsBelief span {
+.missionsBelief span, .missionsBelief p {
     font-size: 1rem;
     color: white;
     text-align: left;
