--- a/frontend/src/CssPages/Order.css
+++ b/frontend/src/CssPages/Order.css
@@ -13,17 +13,14 @@ body {
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 2px 5px grey;
-}
-
-.menuSection {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
 }
 
 .menuSection img {
-    width: 50%;
-    height: auto;
+    width: 100%;
+    height: 50%;
     border-radius: 8px;
 }
 
@@ -31,7 +28,7 @@ button {
     color: white;
     border: none;
     padding: 10px 15px;
-    margin: 5px;
+    margin: 5px 0;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -43,15 +40,10 @@ button:disabled {
 }
 
 .menu-items, .size-items, .toppings-items {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 10px;
     justify-content: space-around;
-}
-
-.menu-items button, .size-items button, .toppings-items div {
-    flex: 1 1 calc(30% - 20px);
-    text-align: center;
 }
 
 .toppings-items label {
