--- a/frontend/src/CssPages/About.css
+++ b/frontend/src/CssPages/About.css
@@ -74,3 +74,13 @@ h2 {
     font-size: 1rem;
     color: white;
 }  
+
+.BackgroundCirc {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    max-width: 800px;
+    margin: 50px auto;
+    text-align: center;
+}
