--- a/frontend/src/CssPages/Contact.css
+++ b/frontend/src/CssPages/Contact.css
@@ -88,3 +88,13 @@ h1 {
     font-weight: bold;
     color: grey;
 }
+
+.BackgroundReg {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    max-width: 800px;
+    margin: 50px auto;
+    text-align: center;
+}
