--- a/frontend/src/CssPages/Home.css
+++ b/frontend/src/CssPages/Home.css
@@ -16,16 +16,6 @@ main {
     border-radius: 8px;
 }
 
-.BackgroundRegtangle {
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    max-width: 800px;
-    margin: 50px auto;
-    text-align: center;
-}
-
 .specialImgSection {
     display: flex;
     align-items: center;
@@ -105,4 +95,14 @@ button {
 
 button:hover {
     background-color: #4cbf4e;
+}
+
+.BackgroundSqu {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    max-width: 800px;
+    margin: 50px auto;
+    text-align: center;
 }
